--- a/Miftakhul_Ma'firoh_Proyek_Analisis_Data_(NEW).ipynb
+++ b/Miftakhul_Ma'firoh_Proyek_Analisis_Data_(NEW).ipynb
@@ -6,7 +6,7 @@
     "id": "H9wADwK78DCz"
    },
    "source": [
-    "# Proyek Analisis Data: [Input Nama Dataset]\n",
+    "# Proyek Analisis Data: [Air Quality Dataset]\n",
     "- **Nama:** Miftakhul Ma'firoh\n",
     "- **Email:** miftakhulfiroh@gmail.com\n",
     "- **ID Dicoding:** miftakhulfiroh"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {
     "id": "FVYwaObI8DC1"
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -402,7 +402,7 @@
        "[35064 rows x 18 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -541,7 +541,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -856,7 +856,7 @@
        "max       10.000000  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {
     "id": "vP3xBClfSyUF"
    },
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1209,7 +1209,7 @@
        "[35064 rows x 18 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1254,7 +1254,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1386,7 +1386,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1715,7 +1715,7 @@
        "[35064 rows x 18 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {
     "id": "SzpYJFf5jnaX"
    },
@@ -1779,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1842,7 +1842,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1971,7 +1971,7 @@
        "2017  80.012286   94.364091"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2099,7 +2099,7 @@
        "2017  16.417615  50.947550  1524.400162  33.400410"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2123,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2557,7 +2557,7 @@
        "December   14.112240  15.433919        NaN  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2618,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2677,7 +2677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
